Blackpurl/src/objects/BRP_Dealers__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Two__c</fullName>
        <label>Line Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <externalId>true</externalId>
        <label>Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Name__c</fullName>
        <label>Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Code__c</fullName>
        <label>Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BRP Dealers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Person_Name__c</columns>
        <columns>Street__c</columns>
        <columns>Line_Two__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Postcode__c</columns>
        <columns>Country__c</columns>
        <columns>Email__c</columns>
        <columns>Website__c</columns>
        <columns>Telephone__c</columns>
        <columns>Fax__c</columns>
        <columns>Type_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BRP Dealers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRP Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>